--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h3 id="greeting">TC Failed Tests to MS Test Playlist Builder</h3>
-        <p>Failed tests #: <span id="failedTestsNumber"></span></p>
+        <p> There are some tests that failed. <span id="failedTestsNumber"></span></p>
         <input id="download" type="submit" value="Download"/>
         <script src="jquery-1.10.2.min.js"></script>
         <script src="popup.js"></script>
