update extension, reorder folders

--- a/app/popup.html
+++ b/app/popup.html
@@ -7,7 +7,8 @@
         <h3 id="greeting">TC Failed Tests to MS Test Playlist Builder</h3>
         <p> There are some tests that failed. <span id="failedTestsNumber"></span></p>
         <input id="download" type="submit" value="Download"/>
-        <script src="jquery-1.10.2.min.js"></script>
-        <script src="popup.js"></script>
+        <p>For TeamCity Enterprise 2017.2.2 (build 50909)</p>
+        <script src="../lib/jquery-1.10.2.min.js"></script>
+        <script src="../app/popup.js"></script>
     </body>
 </html>   
